--- a/build.gradle
+++ b/build.gradle
@@ -24,12 +24,17 @@ bootRun.environment([
         "WELCOME_MESSAGE": "hello",
         "MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE": "*",
         "MANAGEMENT_ENDPOINT_HEALTH_SHOWDETAILS": "always",
+        "MANAGEMENT_HEALTH_PROBES_ENABLED": true,
+        "MANAGEMENT_ENDPOINT_HEALTH_GROUP_CUSTOM_INCLUDE": "BackingServiceHealthIndicator",
+        "MANAGEMENT_ENDPOINT_HEALTH_GROUP_READINESS_INCLUDE": "backingService",
 ])
 
 test.environment([
         "WELCOME_MESSAGE": "Hello from test",
         "MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE": "*",
         "MANAGEMENT_ENDPOINT_HEALTH_SHOWDETAILS": "always",
+        "MANAGEMENT_HEALTH_PROBES_ENABLED": true,
+        "MANAGEMENT_ENDPOINT_HEALTH_GROUP_CUSTOM_INCLUDE": "BackingServiceHealthIndicator",
 ])
 
 springBoot {
