--- a/ci/pipeline.yaml
+++ b/ci/pipeline.yaml
@@ -20,6 +20,9 @@ jobs:
           - -exc
           - |
             cd source-code
+            service postgresql start
+            sudo -u postgres psql -f databases/tracker/create_databases.sql
+            flyway -url="jdbc:postgresql://localhost:5432/tracker_test" -locations=filesystem:databases/tracker migrate -user=tracker -password=password
             ./gradlew test
   - task: pack-and-publish
     privileged: true
@@ -55,6 +58,7 @@ jobs:
   - get: version
     passed:
     - build-pack-and-publish
+    - migrate-review-db
   - task: deploy-to-review
     config:
       platform: linux
@@ -79,6 +83,32 @@ jobs:
             grep "concourse.run_number" k8s/environments/review/deployment.yaml
             sed -i "s/concourse.run_number/${BUILD_NUMBER}/g" k8s/environments/review/deployment.yaml
             kubectl apply -k k8s/environments/review
+- name: migrate-review-db
+  plan:
+  - get: source-code
+    trigger: true
+    passed:
+      - build-pack-and-publish
+  - get: version
+    passed:
+      - build-pack-and-publish
+  - task: migrate-db
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+          repository: pivotaleducation/boot-build
+      inputs:
+      - name: source-code
+      - name: version
+      run:
+        path: sh
+        args:
+          - -exc
+          - |
+            cd source-code
+            flyway -url="jdbc:postgresql://((REVIEW_DB_SERVER))/((REVIEW_DB_NAME))" -locations=filesystem:databases/tracker clean migrate -user=((REVIEW_DB_USER)) -password='((REVIEW_DB_PASSWORD))'
 resources:
 - name: source-code
   type: git
