--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -18,7 +18,10 @@ spec:
     spec:
       containers:
         - name: pal-tracker-container
-          image: chiyukix8/pal-tracker:v3
+          image: chiyukix8/pal-tracker:build-0.0.5
+          envFrom:
+           - secretRef:
+               name: db-credentials
           readinessProbe:
             httpGet:
               path: /actuator/health/readiness
